# TEVision

./: README.md  TEVision.cabal  stack.yaml
TEVision/: LICENSE  README.md  TEVision.cabal  stack.yaml
TEVision/src/: BlurImage.hs  Filters.hs  ImageIO.hs  Lib.hs  Main.hs  ResizeImage.hs  Transforms.hs  Utilities.hs
src/: Filters.hs  ImageIO.hs  Main.hs  ModuleXOR.hs  Transforms.hs  Utilities.hs
