name:                TEVision
version:             1.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/johanjvv089/DocScanner#readme
license:             BSD3
license-file:        LICENSE
author:              Johan Jansen van Vuuren
maintainer:          johanjvv089@gmail.com
copyright:           2017 Johan Jansen van Vuuren
category:            Image Processing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable TEVision

  hs-source-dirs:      src
  main-is:             Main.hs
  
  default-language:    Haskell2010
  
  ghc-options: 
  other-modules:       Filters
                     , Transforms   
                     , Utilities
                     
  default-extensions:  DataKinds 
                       TypeFamilies
                       TypeOperators
                                        
  build-depends:       base >= 4.7
                     , bytestring
                     , directory
                     , linear
                     , opencv <= 3.1  
                     , primitive
                     , vector
