name:                TEVision
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/TEVision#readme
license:             BSD3
license-file:        LICENSE
author:              Johan Jansen van Vuuren
maintainer:          johanjvv089@gmail.com
copyright:           2017 Johan Jansen van Vuuren
category:            Image Processing
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable TEVision
  hs-source-dirs:      src
                     , data  
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  ExplicitForAll , TypeFamilies , FlexibleContexts , AllowAmbiguousTypes, TypeOperators, DataKinds
  other-modules:       Filters
                     , ImageIO
                     , Transforms   
                     , Utilities
                     

  build-depends:       base >= 4.7 && < 5
                     , opencv <= 3.1  
                     , bytestring
                     , scientific>=0.3.4.9
                     , mtl
                     , linear
                     , primitive
                     , vector
                     , containers
                     , GLFW-b >=1.4.8.1
